--- a/resources/index.html
+++ b/resources/index.html
@@ -11,9 +11,15 @@
       // enable to override webpacks publicPath
       // var webpackPublicPath = '/';
     </script>
+
+    <meta name="csrf-token" content="{{ csrf_token() }}">
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+  <div class="min-h-screen bg-gray-100">
+    @include('layouts.navigation')
+    <main>
+      {{ $slot }}
+    </main>
+  </div>
   </body>
 </html>
